# Convective-Coef

./: Memoria_de_Cálculo.txt  README.md  air_params.txt  air_params_treated.parquet  air_property_treatment.py  main.html  main.ipynb  pyproject.toml
